/**
 * Licensed to the Apache Software Foundation (ASF) under one
 * or more contributor license agreements.  See the NOTICE file
 * distributed with this work for additional information
 * regarding copyright ownership.  The ASF licenses this file
 * to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance
 * with the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

// Encoding in Protobuf of an HTTP request-response.RDF terms and other items 
// for Graph, Datasets, Result Set and Patches.

syntax = "proto3";

option java_package         = "org.seaborne.protobuf" ;
option java_outer_classname = "PB_HTTP" ;

import "google/protobuf/any.proto" ;

service HttpProxy {
  rpc http (GrpcHttpRequest) returns (GrpcHttpResponse) {}
}

message GrpcHttpRequest {
  string URL                  = 1;
  string method               = 2;
  map<string, string> headers = 3;
  google.protobuf.Any body    = 4; 
}

message GrpcHttpResponse {
  string URL                  = 1;
  int32 statusCode            = 2 ;
  // Assume single valued header fields.
  map<string, string> headers = 3;
  google.protobuf.Any body    = 4; 
}


 
// Local Variables:
// tab-width: 2
// indent-tabs-mode: nil
// comment-default-style: "//"
// End:
